added new files to tweak

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,3 +1,7 @@
+<div class="gym-image-container">
+	<%#image_tag 'gym_mats.png', :class => "course-type-logo"%>	
+</div>
+
 <!-- Small modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
 
@@ -8,6 +12,8 @@
     </div>
   </div>
 </div>
+
+
 
 <div data-hook="homepage_products">
   <% cache(cache_key_for_products) do %>
