--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,7 +1,11 @@
 <div id="spree-header">
 
   <header id="header" data-hook>
-
+<div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="sr-only">Error:</span>
+  Enter a valid email address
+</div>
   </header>
   <div class="container">
     <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>
