--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,25 +6,25 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-	<body class="" id="<%= @body_id || 'default' %>" data-hook="body">
-	    <%= render partial: 'spree/shared/google_analytics.js' %>
-	    <%= render partial: 'spree/shared/header' %>
+<body class="<%= body_class %>" id="<%= @body_id || 'default' %>" data-hook="body">
+    <%= render partial: 'spree/shared/google_analytics.js' %>
+    <%= render partial: 'spree/shared/header' %>
 
-	    <div class="container">
+    <div class="container">
 
-	      <div class="row" data-hook>
+      <div class="row" data-hook>
 
-	        <%= breadcrumbs(@taxon) %>
+        <%= breadcrumbs(@taxon) %>
 
-	        <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
+        <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
 
-	        <div id="content" class="<%= !content_for?(:sidebar) ? "col-sm-12" : "col-sm-8 col-md-9" %>" data-hook>
-	          <%= flash_messages %>
-	          <%= yield %>
-	        </div>
+        <div id="content" class="<%= !content_for?(:sidebar) ? "col-sm-12" : "col-sm-8 col-md-9" %>" data-hook>
+          <%= flash_messages %>
+          <%= yield %>
+        </div>
 
-	        <%= yield :templates %>
-	      </div>
-	    </div>
+        <%= yield :templates %>
+      </div>
+    </div>
   </body>
 </html>
