--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,8 @@
     <div class="container">
 
       <div class="row" data-hook>
-
-        <%= breadcrumbs(@taxon) %>
-
-        <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
-
-        <div id="content" class="<%= !content_for?(:sidebar) ? "col-sm-12" : "col-sm-8 col-md-9" %>" data-hook>
-          <%= flash_messages %>
-          <%= yield %>
-        </div>
+      <!-- unsure if this is need or not so have commented it out --> 
+        <%# breadcrumbs(@taxon) %>               
 
         <%= yield :templates %>
       </div>
