--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <%#image_tag 'gym-bg.png', :class => "course-type-logo"%>
-    <header id="header" data-hook>
+    <header id="header" data-hook  style="background:red">
       <div class="container">
         <div class="row">
           <figure id="logo" class="col-md-4" data-hook>
@@ -14,4 +14,5 @@
     </header>  
 </div>
 
+</div>
 </div>
