added blue diamond with text and button inside

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,5 +1,10 @@
-<div class="gym-image-container">
-	<%#image_tag 'gym_mats.png', :class => "course-type-logo"%>	
+<div class="row">
+	<div class="col-md-12" id="image-container">
+
+		<%=image_tag "blue-shape-top.png", :id => "image"%>
+		<h1 id="text">Royal Mat is a pioneer in the  field of worn-out tire recycling, offering state-of-the-art products adapted to your needs</h1>
+		<button type="button" class="btn btn-primary btn-lg" id="image-button">Find out more</button>
+	</div>
 </div>
 
 <!-- Small modal -->
