--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -53,3 +53,49 @@ $icon-font-path: "../../bootstrap/";
 h1 {
   margin-bottom: 30px;
 }
+
+.row{
+  margin: 0px;
+}
+
+.col-md-12{
+  padding: 0px;
+}
+
+#image-container{
+  display: block;
+  width: 100%;
+  height: 600px;
+  #image{
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: auto;
+    right: 0;
+  }
+  #text{
+    z-index: 100;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    top: 200px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 375px;
+    text-align: center;
+  }
+  #image-button{
+    position: absolute;
+    font-size: 24px;
+    font-weight: bold;
+    top: 354px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 234px;
+  }
+}
+
+
