--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,12 @@
 
       <div class="row" data-hook>
       <!-- unsure if this is need or not so have commented it out --> 
-        <%# breadcrumbs(@taxon) %>               
+        <%# breadcrumbs(@taxon) %>        
+
+        <div id="contents" class="<%= !content_for?(:sidebar) ? "col-sm-12" : "col-sm-8 col-md-9" %>" data-hook>
+          <%= flash_messages %>
+          <%= yield %>
+        </div>
 
         <%= yield :templates %>
       </div>
