--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -3,7 +3,7 @@
 
 		<%=image_tag "blue-shape-top.png", :id => "image"%>
 		<h1 id="text">Royal Mat is a pioneer in the  field of worn-out tire recycling, offering state-of-the-art products adapted to your needs</h1>
-		<button type="button" class="btn btn-primary btn-lg" id="image-button">Find out more</button>
+		<button type="button" class="btn btn-primary btn-lg" id="image-button"><a  href="#whatever-you-want-to-call-it">Find out more</a></button>
 	</div>
 </div>
 
