--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,8 +1,8 @@
-<div id="spree-header">
+<div id="spree-header" style="margin-bottom:0px;">
   <div class="row">
     <div class="col-md-12">
       <%#image_tag 'gym-bg.png', :class => "course-type-logo"%>
-      <header id="header" data-hook  style="background:red">
+      <header id="header" data-hook  style="background:red; padding:0px;">
         <div class="container">
           <div class="row">
             <figure id="logo" class="col-md-4" data-hook>
