--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -1,4 +1,4 @@
-<div class="row" id="whatever-you-want-to-call-it">
+<div class="row">
 <h1 style="text-align:center; color: #053b77; ">Our Products</h1>
 <% if products.any? %>
 <div id="products" class="row" data-hook>
