--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -64,26 +64,39 @@ h1 {
 
 #image-container{
   display: block;
-  width: 100%;
-  height: 600px;
+  width: 100%;  
   #image{
     position: absolute;
     left: 0;
     top: 0;
     margin: auto;
     right: 0;
+    width: 51%;
   }
   #text{
     z-index: 100;
     position: absolute;
     color: white;
-    font-size: 24px;
+    font-size: 2rem;
     font-weight: bold;
-    top: 200px;
+    top: 28%;
     left: 0;
     right: 0;
     margin: auto;
-    width: 375px;
+    width: 29%;
+    text-align: center;
+  }
+  #map-info{
+    z-index: 100;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    top: 39%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 50%;
     text-align: center;
   }
   #image-button{
@@ -120,4 +133,13 @@ h1 {
 .panel-footer{
   background: none;
   border: none;
+}
+
+#content{
+  padding: 0px;
+}
+
+.container{
+  width: 100%;
+  padding: 0px;
 }
