added bottom image

--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -20,9 +20,9 @@ $icon-font-path: "../../bootstrap/";
     }
   }
   .nav a {
-    color: #fff;
+    color: #053b77;
     &:hover {
-      background:rgba(9, 22, 33, 0.4);
+      background:white;
     }
   }
   .navbar {
@@ -143,3 +143,4 @@ h1 {
   width: 100%;
   padding: 0px;
 }
+
