--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12" id="image-container">
-	<%=image_tag "gym-bg.png", :style=>"width:100%;"%>
+	<%=image_tag "gym-bg-2.png", :style=>"width:100%;"%>
 
 		<%=image_tag "blue-shape-top.png", :id => "image"%>
 		<h1 id="text">Royal Mat is a pioneer in the  field of worn-out tire recycling, offering state-of-the-art products adapted to your needs</h1>
@@ -19,6 +19,14 @@
 
 <div class="row">
 	<%= render :partial => 'spree/shared/info' %>
+</div>
+
+<div class="row">
+<%= image_tag 'rm-logo.png', :style => "margin: auto; display: block; margin-top: 15px; width: 25%; margin-bottom: 15px;"%>
+</div>
+
+<div class="row">
+	<%= render :partial => 'spree/shared/contact_us' %>		
 </div>
 
 
