--- a/app/views/spree/shared/_info.html.erb
+++ b/app/views/spree/shared/_info.html.erb
@@ -2,7 +2,12 @@
 	<div class="col-md-12" id="image-container">
 		<%=image_tag "cow-horse-collage.png", :style=>"width:100%;"%>		
 		<%=image_tag "blue-shape-top.png", :id => "image", :style => "width:70%; top:10%;"%>
-		<h1 id="text" style="top:40%; width:50%">Royal Mat is a pioneer in the  field of worn-out tire recycling, offering state-of-the-art products adapted to your needs</h1>		
+		<div id="text" style="top:29%; width:50%">
+			<h1>An enviromental benchmark</h1>		
+			<p>Royal Mat is a company that respects the enviroment. In addition to using a raw material that is at the end of its useful life cycle, the product manufactured is </p>
+			<h1>100% recyclable </h1>
+			<p>At the end of the manufacturing process of the finished product, the company has salvaged and reused the vast majority of the waste from the different stages of transformation. This puts Royal Mat at the forefront of the recycling field as far as enviroment protection.</p>
+		</div>
 	</div>
 </div>
 
