--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <%#image_tag 'gym-bg.png', :class => "course-type-logo"%>
-      <header id="header" data-hook  style="background: none; padding: 0px; position: absolute; width: 100%; z-index: 1;">
+      <header id="header" data-hook  style="background: none; padding: 0px; width: 100%; z-index: 1;">
         <div class="container">
           <div class="row">
             <figure id="logo" class="col-md-4" data-hook>
