--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -6,9 +6,9 @@
     <% url = product_url(product, taxon_id: @taxon.try(:id)) %>
     <div id="product_<%= product.id %>" class="col-md-4 col-sm-6 product-list-item" data-hook="products_list_item" itemscope itemtype="http://schema.org/Product">
       <div class="panel panel-default" style="background:none; border:none">
-        
+
           <div class="panel-body text-center product-body">
-            <%= link_to large_image(product, itemprop: "image"), url, itemprop: 'url' %><br/>
+            <%= link_to large_image(product, itemprop: "image"), url, itemprop: 'url', :style => "width:100%;" %><br/>
             <div class="product-name">
               <%= product.name%>
             </div>
@@ -18,7 +18,7 @@
               <button type="button" class="btn btn-primary btn-lg info-button" ><%= link_to "Get Info", url, class: 'info', itemprop: "name", title: "product.name" %></button>
             </span>
           </div>
-        
+
       </div>
     </div>
   <% end %>
