--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -8,7 +8,7 @@
       <div class="panel panel-default" style="background:none; border:none">
 
           <div class="panel-body text-center product-body">
-            <%= link_to large_image(product, itemprop: "image"), url, itemprop: 'url', :style => "width:100%;" %><br/>
+            <%= link_to large_image(product, itemprop: "image"), url, itemprop: 'url', :style => "width:100%; !important" %><br/>
             <div class="product-name">
               <%= product.name%>
             </div>
