--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -64,27 +64,28 @@ h1 {
 
 #image-container{
   display: block;
-  width: 100%;  
+  width: 100%;
   #image{
     position: absolute;
     left: 0;
-    top: 0;
+    top: 10%;
     margin: auto;
     right: 0;
-    width: 51%;
+    width: 30%;
   }
   #text{
     z-index: 100;
     position: absolute;
     color: white;
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: bold;
-    top: 28%;
+    top: 30%;
     left: 0;
     right: 0;
     margin: auto;
-    width: 29%;
+    width: 23%;
     text-align: center;
+    line-height: 29px;
   }
   #map-info{
     z-index: 100;
@@ -103,7 +104,7 @@ h1 {
     position: absolute;
     font-size: 24px;
     font-weight: bold;
-    top: 354px;
+    top: 460px;
     left: 0;
     right: 0;
     margin: auto;
@@ -122,7 +123,7 @@ h1 {
 
 .product-name{
   font-size: 40px;
-  color: #053b77; 
+  color: #053b77;
 }
 
 .info-button{
