--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,6 +1,9 @@
 <nav class="col-md-8">
-  <div id="main-nav-bar" class="navbar">    
+  <div id="main-nav-bar" class="navbar">
     <ul class="nav navbar-nav navbar-right" data-hook>
+      <li>
+        <a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">Contact us</a>
+      </li>
       <li id="home-link" data-hook><%= link_to Spree.t(:home), spree.root_path %></li>
       <li id="link-to-cart" data-hook>
         <noscript>
@@ -9,12 +12,12 @@
         &nbsp;
       </li>
       <% if spree_current_user %>
-        <li><%= link_to Spree.t(:my_account), spree.account_path %></li>
-        <li><%= link_to Spree.t(:logout), spree.logout_path %></li>
+        <%# link_to Spree.t(:my_account), spree.account_path %>
+        <%# link_to Spree.t(:logout), spree.logout_path %>
       <% else %>
-        <li id="link-to-login"><%= link_to Spree.t(:login), spree.login_path %></li>
-      <% end %>   
+        <!-- <li id="link-to-login"><%# link_to Spree.t(:login), spree.login_path %></li> -->
+      <% end %>
       <script>Spree.fetch_cart()</script>
     </ul>
-  </div>
+  <!-- Large modal -->
 </nav>
