--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -13,7 +13,7 @@
       </li>
       <% if spree_current_user %>
         <%# link_to Spree.t(:my_account), spree.account_path %>
-        <%# link_to Spree.t(:logout), spree.logout_path %>
+        <li><%= link_to Spree.t(:logout), spree.logout_path %></li>
       <% else %>
         <!-- <li id="link-to-login"><%# link_to Spree.t(:login), spree.login_path %></li> -->
       <% end %>
