added royal mat pan image to header

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row"><!-- -->
 	<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg" style="z-index:inherit">
         <div class="modal-content">
@@ -12,7 +12,7 @@
 	              <div class="col-md-8">
 	              	<p>Please get in touch to place an order, ask for advice or to simply give us your feedback. We will endeavour to answer any questions you may have, and can be relied upon to make sure you get the very best from our excellent products.</p>
 				        	<p>AQUILA CORPORATION (UK) LTD</p>
-				        	<p><a href="mailto:sales@aquamax.co.uk">sales@aquamax.co.uk</a></p>
+				        	<p><a href="mailto:sales@royalmat.co.uk">sales@royalmat.co.uk</a></p>
 				        	<p>Ingleside House</p>
 				        	<p>5 Beeches Road</p>
 				        	<p>Cirencester</p>
@@ -30,15 +30,18 @@
     </div>
   </div>
 </div>
-	<div class="col-md-12" id="image-container">
-	<%= image_tag "gym-bg-2.png", :style=>"width:100%;"%>
-
-		<%=image_tag "blue-shape-top.png", :id => "image"%>
-		<h1 id="text">Royal Mat is a pioneer in the  field of worn-out tire recycling, offering state-of-the-art products adapted to your needs</h1>
+<div class="col-md-12" id="image-container">
+	<div class="image" style="width:100%; height:277px;">
+		<%= image_tag "RoyalMatPan.jpg" , :style =>"width:100%; height:100%;"%>
 		<button type="button" class="btn btn-primary btn-lg" id="image-button"><a  href="#whatever-you-want-to-call-it" style="color:white">Find out more</a></button>
 	</div>
 </div>
-
+<div class="col-md-12" style="width:100%; height:300px;">
+	<div class="content" style="margin-left:40px;">
+		<h1 style="font-weight:300">Royal Mat</h1>
+		<h3 style="font-weight:200">Stables, Dairies, Gymnasiums and Fishing Trawlers. Just some of the places we deliver our mats.</h3>
+	</div>
+</div>
 
 
 
