--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -1,5 +1,5 @@
 <div class="row" id="whatever-you-want-to-call-it">
-<h1 style="text-align:center; color: #053b77; ">Our Products</h1>
+<h1 style="text-align:center; color: #053b77; font-weight:200">Our Products</h1>
 <% if products.any? %>
 <div id="products" class="row" data-hook>
   <% products.each do |product| %>
