--- a/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
+++ b/app/assets/stylesheets/spree/frontend/bootstrap_frontend.css.scss
@@ -14,7 +14,6 @@ $icon-font-path: "../../bootstrap/";
     padding: $line-height-computed 0;
   }
   #logo {
-    margin-bottom: 10px;
     img {
       width: 306px;
     }
@@ -101,14 +100,14 @@ h1 {
     text-align: center;
   }
   #image-button{
-    position: absolute;
+    position: relative;
     font-size: 24px;
     font-weight: bold;
-    top: 460px;
+    top: 50%;
     left: 0;
     right: 0;
     margin: auto;
-    width: 234px;
+    display: block;
   }
 }
 
