--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -2,7 +2,7 @@
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
 
-    <div class="col-md-4" data-hook="product_left_part">
+    <div class="col-md-4" data-hook="product_left_part" style="margin-top:20px;">
       <div data-hook="product_left_part_wrap">
 
         <div id="product-images" data-hook="product_images">
