swapped around text

--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -29,7 +29,7 @@
     <% if @product.price_in(current_currency) and !@product.price.nil? %>
       <div data-hook="product_price" class="col-md-5">
         <div id="product-price">
-          <h4 class="product-section-title"><%= Spree.t(:price) %><span style="font-size:12px"> (including VAT, exluding delivery)</span></h4>
+          <h4 class="product-section-title"><%= Spree.t(:price) %><span style="font-size:12px"> (exluding delivery, including VAT)</span></h4>
           <div>
             <span class="lead price selling" itemprop="price">
               <%= display_price(@product) %>
