--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -15,7 +15,7 @@
           </div>
           <div class="panel-footer text-center">
             <span itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-              <button type="button" class="btn btn-primary btn-lg info-button" ><%= link_to "Get Info", url, class: 'info', itemprop: "name", title: "product.name" %></button>
+              <button type="button" class="btn btn-primary btn-lg info-button" style="margin-top:10px"><%= link_to "Mat Specification", url, class: 'info', itemprop: "name", title: "product.name" %></button>
             </span>
           </div>
 
