--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -33,13 +33,15 @@
 <div class="col-md-12" id="image-container">
 	<div class="image" style="width:100%; height:277px;">
 		<%= image_tag "RoyalMatPan.jpg" , :style =>"width:100%; height:100%;"%>
-		<button type="button" class="btn btn-primary btn-lg" id="image-button"><a  href="#whatever-you-want-to-call-it" style="color:white">Find out more</a></button>
+		<!-- <button type="button" class="btn btn-primary btn-lg" id="image-button"><a  href="#whatever-you-want-to-call-it" style="color:white">Find out more</a></button> -->
 	</div>
 </div>
 <div class="col-md-12" style="width:100%; height:300px;">
 	<div class="content" style="margin-left:40px;">
 		<h1 style="font-weight:300">Royal Mat</h1>
-		<h3 style="font-weight:200">Stables, Dairies, Gymnasiums and Fishing Trawlers. Just some of the places we deliver our mats.</h3>
+		<h3 style="font-weight:200">Here in the UK we supply Royal Mat, made from re-cycled rubber, for use by Dairy Farms, Equestrian Centres, Sports Centres and Fishing Trawlers ensuring comfort and safety for both individuals and animals alike.</h3>
+		<h3 style="font-weight:200">To find out more about the individual mats just click on the individual Mat Specification tab below.</h3>
+		<h3></h3>
 	</div>
 </div>
 
