added new image

--- a/app/views/spree/shared/_info.html.erb
+++ b/app/views/spree/shared/_info.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12" id="image-container">
-		<%=image_tag "cow-horse-collage.png", :style=>"width:100%;"%>
+		<%=image_tag "cow-horse-collage-3.png", :style=>"width:100%;"%>
 		<%#image_tag "blue-shape-top.png", :id => "image", :style => "width:70%; top:10%;"%>
 		<!-- <div id="text" style="top:29%; width:50%">
 			<h1>An enviromental benchmark</h1>
