--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -10,7 +10,7 @@
 	        	<div class="container-fluid">
 	            <div class="row">
 	              <div class="col-md-8">
-	              	<p>Please get in touch to place an order, ask for advice or to simply give us your feedback. We will endeavour to answer any questions you may have, and can be relied upon to make sure you get the very best from our excellent products.</p>
+	              	<p>Please get in touch for advice or to simply give us your feedback. We will endeavour to answer any questions you may have, and can be relied upon to make sure you get the very best from our excellent products.</p>
 				        	<p>AQUILA CORPORATION (UK) LTD</p>
 				        	<p><a href="mailto:sales@royalmat.co.uk">sales@royalmat.co.uk</a></p>
 				        	<p>Ingleside House</p>
