--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -40,8 +40,8 @@
 <div class="col-md-12" style="width:100%; height:265px;">
 	<div class="content" style="margin-left:40px;">
 		<h1 style="font-weight:300">Royal Mat</h1>
-		<h3 style="font-weight:200">Here in the UK we supply Royal Mat, made from re-cycled rubber, for use by Dairy Farms, Equestrian Centres, Sports Centres and Fishing Trawlers ensuring comfort and safety for both individuals and animals alike.</h3>
-		<h3 style="font-weight:200">To find out more about the individual mats just click on the individual Mat Specification tab below.</h3>
+		<h3 style="font-weight:200">Here in the UK we supply Royal Mat, made from recycled rubber, for use by Dairy Farms, Equestrian Centres, Sports Centres and Fishing Trawlers ensuring comfort and safety for both individuals and animals alike.</h3>
+		<h3 style="font-weight:200">To find out more about the individual mats just click on the Mat Specification tab below.</h3>
 		<h3></h3>
 	</div>
 </div>
