--- a/app/views/spree/address/_form.html.erb
+++ b/app/views/spree/address/_form.html.erb
@@ -27,10 +27,10 @@
     <%= form.label :city, Spree.t(:city) %><span class="required">*</span><br />
     <%= form.text_field :city, :class => 'form-control required' %>
   </p>
-  <p class="form-group" id=<%="#{address_id}country" %>>
+  <p class="form-group" style="display:none" id=<%="#{address_id}country" %>>
     <%= form.label :country_id, Spree.t(:country) %><span class="required">*</span><br />
     <span id=<%="#{address_id}country-selection" %>>
-      <%= form.collection_select :country_id, available_countries, :id, :name, {}, {:class => 'form-control required'} %>
+      <%= form.collection_select :country_id, available_countries, :id, :name, {:selected => 77}, {:class => 'form-control required'} %>
     </span>
   </p>
 
