--- a/app/views/spree/orders/_line_item.html.erb
+++ b/app/views/spree/orders/_line_item.html.erb
@@ -24,8 +24,8 @@
     <td class="lead text-primary cart-item-price" data-hook="cart_item_price">
       <%= line_item.single_money.to_html %>
     </td>
-    <td class="cart-item-quantity" data-hook="cart_item_quantity" valign="center" style="  width:150px; font-weight: bold; height: 45px;">
-      <%= item_form.number_field :quantity, min: 0, class: "form-control line_item_quantity", size: 5 %>
+    <td class="cart-item-quantity" data-hook="cart_item_quantity" valign="center" style="  width:150px; font-weight: bold; height: 45px; padding-right: 50px;">
+      <%= item_form.number_field :quantity, min: 0, class: "form-control line_item_quantity", size: 5, :style => "font-size: 20px; height: 40px;" %>
     </td>
     <td class="lead text-primary cart-item-total" data-hook="cart_item_total">
       <%= line_item.display_amount.to_html unless line_item.quantity.nil? %>
