--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -37,7 +37,7 @@
 		<!-- <button type="button" class="btn btn-primary btn-lg" id="image-button"><a  href="#whatever-you-want-to-call-it" style="color:white">Find out more</a></button> -->
 	</div>
 </div>
-<div class="col-md-12" style="width:100%; height:265px;">
+<div class="col-md-12 homepage-blurb" style="">
 	<div class="content" style="margin-left:40px;">
 		<h1 style="font-weight:300">Royal Mat</h1>
 		<h3 style="font-weight:200">Here in the UK we supply Royal Mat, made from recycled rubber, for use by Dairy Farms, Equestrian Centres, Sports Centres and Fishing Trawlers ensuring comfort and safety for both individuals and animals alike.</h3>
