--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,11 @@
 body{
 	font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
+
+.homepage-blurb{
+	width:100%;
+	height:265px;
+	@media only screen and (max-width: 768px) {
+		height:265px;
+	}
+}
