--- a/app/views/spree/address/_form.html.erb
+++ b/app/views/spree/address/_form.html.erb
@@ -16,7 +16,7 @@
     </p>
   <% end %>
   <p class="form-group" id=<%="#{address_id}address1" %>>
-    <%= form.label :address1, Spree.t(:street_address) %><span class="required">*</span><br />
+    <%= form.label :address1, "House Name or Number" %><span class="required">*</span><br />
     <%= form.text_field :address1, :class => 'form-control  required' %>
   </p>
   <p class="form-group" id=<%="#{address_id}address2" %>>
@@ -24,7 +24,7 @@
     <%= form.text_field :address2, :class => 'form-control' %>
   </p>
   <p class="form-group" id=<%="#{address_id}city" %>>
-    <%= form.label :city, Spree.t(:city) %><span class="required">*</span><br />
+    <%= form.label :city, "Town" %><span class="required">*</span><br />
     <%= form.text_field :city, :class => 'form-control required' %>
   </p>
   <p class="form-group" style="display:none" id=<%="#{address_id}country" %>>
