--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,6 +1,6 @@
 <nav class="col-md-8">
   <div id="main-nav-bar" class="navbar">
-    <ul class="nav navbar-nav navbar-right" data-hook style="font-weight:200; font-sixe:16px;">
+    <ul class="nav navbar-nav navbar-right" data-hook style="font-weight:bold; font-sixe:16px;">
       <li>
         <a href="#" data-toggle="modal" data-target=".bs-example-modal-lg">Contact us</a>
       </li>
