--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -16,9 +16,7 @@
           </div>
           <div class="panel-footer text-center">
             <span itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-              <button type="button" class="btn btn-primary btn-lg info-button" style="margin-top:10px">
-                <a href="https://royal-mat.herokuapp.com/products/<%= product.id %>" class="info">Mat Specification</a>
-              </button>
+              <a href="https://royal-mat.herokuapp.com/products/<%= product.id %>" class="info btn btn-primary btn-lg info-button" style="margin-top:10px">Mat Specification</a>
             </span>
           </div>
 
